<resources>
    <string name="app_name">CyderMap</string>
    <string name="sign_up">注册</string>
    <string name="log_in">登陆</string>
    <string name="cancel">取消</string>
    <string name="error_username">账号不可用</string>
    <string name="error_password">密码格式错误</string>
    <string name="full_name">姓名</string>
    <string name="username">账号</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="gender">性别</string>
    <string name="remember_username">记住账号</string>
    <string name="remember_password">记住密码</string>
    <string name="gender_male">男</string>
    <string name="gender_female">女</string>
    <string name="birthday">生日</string>
    <string name="phone">手机</string>
    <string name="email">Email</string>
    <string name="interest">兴趣</string>
    <string name="province">省份或直辖市</string>
    <string name="birthday_select_button">点击选择</string>
    <string name="interests_select_button">点击选择</string>
    <string name="city">城市</string>
    <string name="comment">自我评价</string>
    <string name="username_helper_text">以字母开头，不能超过二十个字符哦~</string>
    <string name="password_helper_text">以字母开头，长度在6~18之间，只能包含字母、数字和下划线哦~</string>

    <string name="longitude">经度</string>
    <string name="latitude">纬度</string>
</resources>